--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 # requirements.txt
-numpy
-pandas
+numpy~=1.24.2
+pandas~=1.5.3
   # sonification requirements
-pygame
+pygame~=2.1.3
 pretty_midi
-midiutil
+midiutil~=1.2.1
+mido~=1.2.10
+setuptools~=60.2.0
+matplotlib~=3.7.0
+audiolazy~=0.6
